deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: arch-homework
spec:
    replicas: 3
    selector:
       matchLabels:
          app: app-arch-homework
    template:
       metadata:
          labels:
             app: app-arch-homework
       spec:
          containers:
          - name: arch-homework
            image: getsky/arch.homework:v1
            ports:
              - name: web 
                containerPort: 8000
