ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arch-homework-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /($|)(.*)
          backend:
            serviceName: arch-homework-service
            servicePort: 8000
        - path: /otus/alexander($|/.*)
          backend:
            serviceName: arch-homework-service
            servicePort: 8000
